Preparing for new release (1.3)
git-svn-id: https://plugins.svn.wordpress.org/shortcode-factory/trunk@1188738 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/core.css
+++ b/css/core.css
@@ -182,3 +182,11 @@
 .scf-notice.scf-warning {
 	border-left-color: #d46f15;
 }
+
+.scf-control-chkbox {
+	float: left;
+	width: 100%;
+	display: block;
+	margin-top: 5px;
+	margin-left: 20px;
+}
