--- a/css/core.css
+++ b/css/core.css
@@ -7,7 +7,7 @@
 }
 
 .scf_shortcodes li {
-	width: 30%;
+	width: 23.5%;
 	height: 50px;
 	margin: 5px;
 	background-color: #eee;
@@ -85,6 +85,10 @@
 	cursor: pointer;
 }
 
+.scf-left {
+	float: left;
+}
+
 .scf-right {
     float: right;
 }
@@ -108,4 +112,81 @@
 .highlight-error {
 	border: 1px solid red !important;
 	background-color: #FCC0CD !important;
+}
+
+.scf-cell {
+	display: table-cell;
+	box-sizing: border-box;
+	vertical-align: top;
+}
+
+.scf-1-4 {width: 25%;}
+.scf-2-4 {width: 50%;}
+.scf-3-4 {width: 75%;}
+.scf-4-4 {width: 100%;}
+
+.scf-1-2 {width: 50%;}
+.scf-2-2 {width: 100%;}
+
+.scf-1-3 {width: 33.33%;}
+.scf-2-3 {width: 66.67%;}
+.scf-3-3 {width: 100%;}
+
+.scf-pad-5 {padding: 5px;}
+.scf-pad-10 {padding: 10px;}
+.scf-pad-15 {padding: 15px;}
+.scf-pad-20 {padding: 20px;}
+
+#scf-pages ul, #scf-pages ol {
+	list-style: inherit;
+	padding: inherit;
+	box-sizing: border-box;
+}
+
+.scf-promo {
+	background-color: white;
+	border-radius: 6px;
+}
+
+#scf-promo-content {
+	width: 100%;
+}
+
+#scf-promo-content img {
+	max-width: 100%;
+}
+
+.scf-notice {
+	padding: 10px 15px;
+	box-sizing: border-box;
+	background-color: #FFF;
+	border-left: 4px solid lightgrey;
+	box-shadow: 1px 1px 2px #999;
+	transition: all .5s;
+	-webkit-transition: all .5s;
+	font-size: 13px;
+}
+
+.scf-notice.scf-success {
+	border-left-color: #24890d;
+}
+
+.scf-notice.scf-error {
+	border-left-color: #f00;
+}
+
+.scf-notice.scf-alert {
+	border-left-color: #00A8EF;
+}
+
+.scf-notice.scf-warning {
+	border-left-color: #d46f15;
+}
+
+.scf-control-chkbox {
+	float: left;
+	width: 100%;
+	display: block;
+	margin-top: 5px;
+	margin-left: 20px;
 }
